added markdown explanations

--- a/cifar10_cnn/cifar10_eval.ipynb
+++ b/cifar10_cnn/cifar10_eval.ipynb
@@ -1,12 +1,44 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "47129c1e-26e6-4916-b704-0ba00bf2f503",
+   "metadata": {},
+   "source": [
+    "### CIFAR10 Classifer Evaluation\n",
+    "In this notebook, we evaluate pre-trained **CNN** to classify images from the CIFAR-10 database.\n",
+    "\n",
+    "The images in this database are small color images that fall into one of ten classes; some example images are pictured below.\n",
+    "<img src='notebook_ims/cifar_data.png' width=50% height=50% />"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "c97a7239-e746-4614-959d-effa281a3d58",
+   "execution_count": null,
+   "id": "e8a6c7b4-45ed-4430-90bd-b98297ff8c3a",
    "metadata": {},
    "outputs": [],
    "source": [
+    "!python ../tools/download_data_set.py --dataset_name cifar10"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "c97a7239-e746-4614-959d-effa281a3d58",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (398250366.py, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"/tmp/ipykernel_4604/398250366.py\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    // Import necessary library headers.\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "// Import necessary library headers.\n",
     "#include <mlpack/xeus-cling.hpp>\n",
     "#include <mlpack/core.hpp>\n",
     "#include <mlpack/core/data/split_data.hpp>\n",
@@ -74,13 +106,56 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "3f2a4573-218a-4f03-ad42-d881ea143686",
+   "metadata": {},
+   "source": [
+    "### Network Architecture"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c732fdff-7532-4812-940f-4ffb022d57e0",
+   "metadata": {},
+   "source": [
+    "Our Model using Convolutional Neural Network CNN architecture.\n",
+    "* Convolutional layers - which can be thought of as stack of filtered images.\n",
+    "* Maxpooling layers - which reduce the x-y size of an input, keeping only the most _active_ pixels from the previous layer.\n",
+    "* Linear layer - Applies a linear transformation to the incoming data: $ y=xA^T+b $\n",
+    "\n",
+    "```\n",
+    "32 x 32 x 3 --- conv (6 feature maps of kernel size 5 x 5 with stride = 1) ---> 28 x 28 x 6\n",
+    "28 x 28 x 6 ------------------------ Leaky ReLU ------------------------------> 28 x 28 x 6 \n",
+    "28 x 28 x 6 ------- max pooling (kernel size of 2 x 2 with stride = 2) -------> 14 x 14 x 6\n",
+    "14 x 14 x 6 --- conv (16 feature maps of kernel size 5 x 5 and stride = 1) ---> 10 x 10 x 16\n",
+    "10 x 10 x 16 ----------------------- Leaky ReLU ------------------------------> 10 x 10 x 16\n",
+    "10 x 10 x 16 ------ max pooling (kernel size of 2 x 2 with stride = 2) -------> 5 x 5 x 16\n",
+    "5 x 5 x 16  ------------------------- Linear ---------------------------------> 10\n",
+    "```\n",
+    "\n",
+    "An example 2 convolutional layers is shown in the image below,\n",
+    "\n",
+    "<img src='notebook_ims/2_layer_conv.png' height=50% width=50% />"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 7,
    "id": "d92c9f56-8b09-46ef-9828-f60f4b7d1ce6",
    "metadata": {},
    "outputs": [],
    "source": [
+    "// Create the Feed Forward Neural Network with Random weight on which our,\n",
+    "// pretrained model weight will be loaded\n",
     "FFN<NegativeLogLikelihood<>, RandomInitialization> model;"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5deb50da-8e55-4d51-8a05-34b61ac6f36d",
+   "metadata": {},
+   "source": [
+    "###  Load the Model with the Lowest Validation Loss"
    ]
   },
   {
@@ -103,35 +178,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "c46e46cf-a4e3-4d1a-8a35-32e1116684ce",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "@0x7f1863fee150"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "model"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 11,
    "id": "b37b63e4-561a-4528-8db9-786336ff91cb",
    "metadata": {},
    "outputs": [],
    "source": [
+    "// Matrix for storing test feeature & labels.\n",
     "mat testData, testY;\n",
+    "// Load the test data.\n",
     "mlpack::data::Load(\"../data/cifar-10_test.csv\", testData, true);\n",
+    "// Drop the header column.\n",
     "testData.shed_col(0);\n",
+    "// Remove labels before predicting.\n",
     "testY = testData.row(testData.n_rows - 1);\n",
     "testData.shed_row(testData.n_rows - 1);"
    ]
@@ -153,9 +211,10 @@
    "source": [
     "cout << \"Starting Prediction on testset ...\" << endl;\n",
     "mat testPredProbs;\n",
+    "// Get predictions on test data points.\n",
     "model.Predict(testData, testPredProbs);\n",
-    "// arma::Row<size_t> testPreds = getLabels(testPredProbs);\n",
-    "// double testAccuracy = arma::accu(testPreds == testY) / (double) testY.n_elem * 100;"
+    "arma::Row<size_t> testPreds = getLabels(testPredProbs);\n",
+    "double testAccuracy = arma::accu(testPreds == testY) / (double) testY.n_elem * 100;"
    ]
   },
   {
