added markdown explanations & minor changes

--- a/cifar10_cnn/cifar10_eval.ipynb
+++ b/cifar10_cnn/cifar10_eval.ipynb
@@ -9,6 +9,7 @@
     "In this notebook, we evaluate pre-trained **CNN** to classify images from the CIFAR-10 database.\n",
     "\n",
     "The images in this database are small color images that fall into one of ten classes; some example images are pictured below.\n",
+    "\n",
     "<img src='notebook_ims/cifar_data.png' width=50% height=50% />"
    ]
   },
@@ -24,19 +25,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "c97a7239-e746-4614-959d-effa281a3d58",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (398250366.py, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"/tmp/ipykernel_4604/398250366.py\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    // Import necessary library headers.\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "// Import necessary library headers.\n",
     "#include <mlpack/xeus-cling.hpp>\n",
@@ -50,7 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "95a0d96b-0727-4665-9098-5a403728724a",
+   "id": "07be2b79-ea94-4bc8-8dbc-db16399d7823",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +52,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "103627ac-6ba9-4d7d-addf-79e608ca8068",
+   "id": "3746f908-3cff-4803-9795-aa96e59d69c5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +62,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "0f998ac6-d69d-4cdd-98c2-9e19e4783574",
+   "id": "f32adecb-6d46-4e21-8429-f1e42b54f7d6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +72,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "ba849ce7-1ad9-470d-b9a2-8c379c8ff11e",
+   "id": "95a0d96b-0727-4665-9098-5a403728724a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,7 +86,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "arma::Row<size_t> getLabels(arma::mat yPreds) \n",
+    "arma::Row<size_t> getLabels(const arma::mat& yPreds) \n",
     "{\n",
     "    arma::Row<size_t> yLabels(yPreds.n_cols);\n",
     "    for (arma::uword i = 0; i < yPreds.n_cols; ++i)\n",
@@ -147,7 +139,20 @@
    "source": [
     "// Create the Feed Forward Neural Network with Random weight on which our,\n",
     "// pretrained model weight will be loaded\n",
-    "FFN<NegativeLogLikelihood<>, RandomInitialization> model;"
+    "FFN<NegativeLogLikelihood<>, RandomInitialization> model;\n",
+    "\n",
+    "model.Add<Convolution<>>(3, 6, 5, 5, 1, 1, 0, 0, 32, 32); \n",
+    "model.Add<LeakyReLU<>>(); \n",
+    "model.Add<MaxPooling<>>(2, 2, 2, 2, true);\n",
+    "model.Add<Convolution<>>(6, 16, 5, 5, 1, 1, 0, 0, 14, 14);\n",
+    "model.Add<LeakyReLU<>>();\n",
+    "model.Add<MaxPooling<>>(2, 2, 2, 2, true);\n",
+    "model.Add<Linear<>>(5*5*16, 120);\n",
+    "model.Add<LeakyReLU<>>();\n",
+    "model.Add<Linear<>>(120, 84);\n",
+    "model.Add<LeakyReLU<>>();\n",
+    "model.Add<Linear<>>(84, 10);\n",
+    "model.Add<LogSoftMax<>>();"
    ]
   },
   {
@@ -173,12 +178,12 @@
     }
    ],
    "source": [
-    "data::Load(\"model.xml\", \"model\", model);"
+    "mlpack::data::Load(\"model.xml\", \"model\", model);"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "id": "b37b63e4-561a-4528-8db9-786336ff91cb",
    "metadata": {},
    "outputs": [],
@@ -230,21 +235,16 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
-   "language": "python",
-   "name": "python3"
+   "display_name": "C++14",
+   "language": "C++14",
+   "name": "xcpp14"
   },
   "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "codemirror_mode": "text/x-c++src",
+   "file_extension": ".cpp",
+   "mimetype": "text/x-c++src",
+   "name": "c++",
+   "version": "14"
   }
  },
  "nbformat": 4,
