add generate image cpython script

--- a/mnist_gan/mnist_gan_notebook.ipynb
+++ b/mnist_gan/mnist_gan_notebook.ipynb
@@ -78,8 +78,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "411accfd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#include <mlpack/xeus-cling.hpp>\n",
+    "\n",
+    "#define WITHOUT_NUMPY 1\n",
+    "#include \"matplotlibcpp.h\"\n",
+    "#include \"xwidgets/ximage.hpp\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "623277b4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#include \"../utils/generateimage.hpp\"\n",
+    "\n",
+    "namespace plt = matplotlibcpp;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "0a003687",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Call failed.\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "1aec8fd7723942fea99127a8f84791b1",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "A Jupyter widget with unique id: 1aec8fd7723942fea99127a8f84791b1"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "GenerateImage(\"./saved_csv_files/ouput_mnist_1.csv\", \"output_2.png\");\n",
+    "auto im = xw::image_from_file(\"output_2.png\").finalize();\n",
+    "im"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "55352260",
    "metadata": {},
    "outputs": [],
    "source": []
