modified generateimage python script

--- a/mnist_gan/mnist_gan_notebook.ipynb
+++ b/mnist_gan/mnist_gan_notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "438dc71b",
+   "id": "9e5d496b",
    "metadata": {},
    "source": [
     "# Generative Adverserial Networks in mlpack\n",
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "13bd5c9f",
+   "id": "19351cd6",
    "metadata": {},
    "source": [
     "# Approach\n",
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "343f3224",
+   "id": "f69e2067",
    "metadata": {},
    "source": [
     "Let's create the training file 'mnist_gan.cpp', train the model and save it."
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4cb6adc2",
+   "id": "7ff71009",
    "metadata": {},
    "source": [
     "Let's also create the 'mnist_generate.cpp' file for sampling, generating the outputs from the model and saving the CSV file."
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "48fa8872",
+   "id": "c333fc3f",
    "metadata": {},
    "source": [
     "Let's look at the outputs."
@@ -79,7 +79,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "411accfd",
+   "id": "ba6ad46d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,8 +92,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "623277b4",
+   "execution_count": 2,
+   "id": "2dcf56a4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,43 +104,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "0a003687",
+   "execution_count": 9,
+   "id": "04fc2fd6",
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Call failed.\n"
-     ]
-    },
-    {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1aec8fd7723942fea99127a8f84791b1",
+       "model_id": "6e93ef0324214a2581451af02994a836",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "A Jupyter widget with unique id: 1aec8fd7723942fea99127a8f84791b1"
+       "A Jupyter widget with unique id: 6e93ef0324214a2581451af02994a836"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "GenerateImage(\"./saved_csv_files/ouput_mnist_1.csv\", \"output_2.png\");\n",
-    "auto im = xw::image_from_file(\"output_2.png\").finalize();\n",
+    "GenerateImage(\"./samples_csv_files/sample.csv\", \"./samples_posterior/sample.png\");\n",
+    "auto im = xw::image_from_file(\"./samples_posterior/sample.png\").finalize();\n",
     "im"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "55352260",
+   "id": "b26c96ff",
    "metadata": {},
    "outputs": [],
    "source": []
