modified mnist gan notebook

--- a/mnist_gan/mnist_gan_notebook.ipynb
+++ b/mnist_gan/mnist_gan_notebook.ipynb
@@ -54,9 +54,19 @@
   },
   {
    "cell_type": "markdown",
+   "id": "212e3471",
+   "metadata": {},
+   "source": [
+    "# Data\n",
+    "For the datasets, we will be using a small subset of MNIST dataset comprising of only 4's and 9's."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "f69e2067",
    "metadata": {},
    "source": [
+    "# Training File\n",
     "Let's create the training file 'mnist_gan.cpp', train the model and save it."
    ]
   },
@@ -65,6 +75,7 @@
    "id": "7ff71009",
    "metadata": {},
    "source": [
+    "# Generate Output CSV\n",
     "Let's also create the 'mnist_generate.cpp' file for sampling, generating the outputs from the model and saving the CSV file."
    ]
   },
@@ -78,62 +89,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "id": "ba6ad46d",
    "metadata": {},
    "outputs": [],
    "source": [
     "#include <mlpack/xeus-cling.hpp>\n",
     "\n",
-    "#define WITHOUT_NUMPY 1\n",
-    "#include \"matplotlibcpp.h\"\n",
     "#include \"xwidgets/ximage.hpp\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "id": "2dcf56a4",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#include \"../utils/generateimage.hpp\"\n",
-    "\n",
-    "namespace plt = matplotlibcpp;"
+    "// Import the generate image script from utils folder\n",
+    "#include \"../utils/generateimage.hpp\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "id": "04fc2fd6",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6e93ef0324214a2581451af02994a836",
+       "model_id": "e7cb5d5284844723975c2e993a1f2ce1",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "A Jupyter widget with unique id: 6e93ef0324214a2581451af02994a836"
+       "A Jupyter widget with unique id: e7cb5d5284844723975c2e993a1f2ce1"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "// Let's generate imgage from csv files\n",
     "GenerateImage(\"./samples_csv_files/sample.csv\", \"./samples_posterior/sample.png\");\n",
     "auto im = xw::image_from_file(\"./samples_posterior/sample.png\").finalize();\n",
     "im"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "23b323fd",
+   "metadata": {},
+   "source": [
+    "Thus we can see how to leverage mlpack for unsupervised learning, especially GAN's in this example."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b26c96ff",
+   "id": "1ab57159",
    "metadata": {},
    "outputs": [],
    "source": []
