added warning in notebook, regarding model inference

--- a/cifar10_cnn/cifar10_eval.ipynb
+++ b/cifar10_cnn/cifar10_eval.ipynb
@@ -200,6 +200,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ca47e69f-68ef-4d31-b6c2-44a03b8efbbd",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "<h4><font color='red'>Note: Model inference does not work properly in the notebook, the below cell executes forever.</font></h4>\n",
+    "<h4><font color='red'>As for now this notebook is only for visualization & explanation. Please use the <em>eval.cpp</em> for model inference.</font></h4>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "0b23865a-f8c4-4d91-b0d6-e883fe48dd50",
