Switched to Internal split for LSTM examples

--- a/lstm_stock_prediction/lstm_multivariate_time_series_prediction.ipynb
+++ b/lstm_stock_prediction/lstm_multivariate_time_series_prediction.ipynb
@@ -200,10 +200,9 @@
     "size_t inputSize = 5, outputSize = 2;\n",
     "\n",
     "// Split the dataset into training and validation sets.\n",
-    "arma::mat trainData = dataset.submat(arma::span(),arma::span(0, (1 - RATIO) *\n",
-    "      dataset.n_cols));\n",
-    "arma::mat testData = dataset.submat(arma::span(), arma::span((1 - RATIO) * dataset.n_cols,\n",
-    "      dataset.n_cols - 1));"
+    "arma::mat trainData;\n",
+    "arma::mat testData;\n",
+    "data::Split(dataset, trainData , testData, RATIO, false);"
    ]
   },
   {
