changed data folders

--- a/examples/california_housing_price_prediction_with_linear_regression/CPP/california_housing_price_prediction_with_lr_cpp.ipynb
+++ b/examples/california_housing_price_prediction_with_linear_regression/CPP/california_housing_price_prediction_with_lr_cpp.ipynb
@@ -452,7 +452,7 @@
    ],
    "source": [
     "//PandasScatterMap(inputFile, imgFile, x, y, label, c, outputFile);\n",
-    "PandasScatterMap(\"housing.csv\",\"california.png\",\"longitude\",\"latitude\",\"Population\",\"median_house_value\",\"output2.png\");\n",
+    "PandasScatterMap(\"housing.csv\",\"../images/california.png\",\"longitude\",\"latitude\",\"Population\",\"median_house_value\",\"output2.png\");\n",
     "auto im = xw::image_from_file(\"output2.png\").finalize();\n",
     "im"
    ]
