add links and readmes

--- a/examples/portfolio_optimization/CPP/portfolio-optimization-cpp.ipynb
+++ b/examples/portfolio_optimization/CPP/portfolio-optimization-cpp.ipynb
@@ -11,7 +11,7 @@
     " *\n",
     " * A simple practical application of MultiObjective Decomposition Evolutionary Algorithm\n",
     " * - Differential Variant (MOEA/D-DE) in portfolio optimization. This example allows user to freely choose \n",
-    " * multiple stocks of their choice, which upon request, generates csv automagically \n",
+    " * multiple stocks of their choice, which upon request, generates csv automatically \n",
     " * via a helper function.\n",
     " *\n",
     " * The algorithm will try and optimize the trade-off between the returns and\n",
